# s3m-protobuild

./: .gitignore  LICENSE-MIT  README.md  pyproject.toml
src/s3m_protobuild/: build.py  clean.py  cli.py  config.py  diag.py  errors.py  gitinfo.py  metadata.py  model.py  output.py  packages.py  planning.py  python_package.py  run.py  selectors.py  sources.py  staging.py  toolchain.py
src/s3m_protobuild/targets/: go.py  openapi_descriptor.py  py_betterproto.py  py_grpcio.py
tests/: _helpers.py  conftest.py  test_build.py  test_config.py  test_go.py  test_metadata.py  test_output.py  test_packages.py  test_py_betterproto.py  test_py_grpcio.py  test_run.py  test_selectors.py  test_sources.py  test_toolchain_diag.py
