[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "s3m-protobuild"
version = "0.1.0"
description = "Standalone builder for S3M protobuf API artifacts"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT OR Apache-2.0"
license-files = ["LICENSE-MIT", "LICENSE-APACHE"]
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
s3m-protobuild = "s3m_protobuild.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pylint.main]
disable = ["C0114", "C0115", "C0116"]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 12
max-positional-arguments = 12
max-locals = 30
